syntax = "proto3";

option go_package = "./proto";

message Error {
  string id = 1;
  int32 code = 2;
  string detail = 3;
  string status = 4;
};
